--- a/styles/main.less
+++ b/styles/main.less
@@ -2,86 +2,89 @@
 @import "buttons";
 @import (inline) "./node_modules/codemirror/lib/codemirror.css";
 
-
-html, body, #app {
+#app,
+body,
+html {
     height: 100%;
-		min-height: 100% !important;
+    min-height: 100% !important;
     margin: 0;
     padding: 0;
 }
 
 html.popup {
-	width: 400px;
+    width: 400px;
 }
 
 #main-grid {
-  display: flex;
-  height: 100%;
+    display: flex;
+    height: 100%;
 }
 
 #navigation {
-  flex-basis: 200px;
-  padding: 0px;
-  margin: 0px;
-  border-right: 1px solid #ccc;
+    flex-basis: 200px;
+    padding: 0;
+    margin: 0;
+    border-right: 1px solid #ccc;
 }
 
 #navigation li {
-  padding: 8px;
+    padding: 8px;
     border-bottom: 1px solid #ccc;
 }
 
 #content {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
 }
 
 #settings {
-  flex-basis: 40px;
-  display: flex;
-  border-bottom: 1px solid #ccc;
+    flex-basis: 40px;
+    display: flex;
+    border-bottom: 1px solid #ccc;
 }
 
-#inner-content, #editor, #text-editor {
-  padding: 8px;
-  height: 93%;
+#editor,
+#inner-content,
+#text-editor {
+    padding: 8px;
+    height: 93%;
 }
 
 #variables-editor {
-  display: flex;
-  flex-direction: column;
-  margin: 8px;
+    display: flex;
+    flex-direction: column;
+    margin: 8px;
 }
 
 #variables-editor .row {
-  display: flex;
+    display: flex;
 }
 
 #variables-editor input {
-  flex-grow: 2;
-  height: 100%;
-  margin: 8px;
+    flex-grow: 2;
+    height: 100%;
+    margin: 8px;
 }
 
 #variables-editor label {
-  display: block;
-  margin: 12px 0;
-  height: 100%;
-  line-height: 100%;
-  width: 60px;
-  vertical-align: middle;
-  font-weight: bold;
+    display: block;
+    margin: 12px 0;
+    height: 100%;
+    line-height: 100%;
+    width: 60px;
+    vertical-align: middle;
+    font-weight: bold;
 }
 
 #variables-editor .help {
-  flex-grow: 3;
-  display: block;
-  margin: 12px 0;
-  height: 100%;
-  line-height: 100%;
-  width: 60px;
-  font-size: 90%
+    flex-grow: 3;
+    display: block;
+    margin: 12px 0;
+    height: 100%;
+    line-height: 100%;
+    width: 60px;
+    font-size: 90%;
 }
 
 .CodeMirror {
@@ -90,60 +93,129 @@ html.popup {
 }
 
 .ReactCodeMirror {
-  height: 100%;
+    height: 100%;
 }
 
 #navigation li {
-  padding: 0;
+    padding: 0;
 }
 
 #navigation li h2 {
-  font-weight: bold;
-  display: block;
-  margin: 0;
-  padding: 8px;
-  background-color: #ccc;
+    font-weight: bold;
+    display: block;
+    margin: 0;
+    padding: 8px;
+    background-color: #ccc;
 }
 
 #navigation li ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 #navigation li ul li {
-  padding: 8px;
+    padding: 8px;
 }
 
-#configuration-title {
-
-}
+#configuration-title {}
 
 #settings b {
-  margin: 12px 1em;
-  height: 100%;
-  display: block;
-  vertical-align: middle;
+    margin: 12px 1em;
+    height: 100%;
+    display: block;
+    vertical-align: middle;
 }
 
 #settings .toggle-box {
-  margin: 12px 1em;
-  height: 100%;
-  display: block;
-  vertical-align: middle;
+    margin: 12px 1em;
+    height: 100%;
+    display: block;
+    vertical-align: middle;
 }
 
-#settings select, #settings input {
-  flex-grow: 1;
-  margin: 8px;
+#settings input,
+#settings select {
+    flex-grow: 1;
+    margin: 8px;
 }
 
-
-
-#no-configurations, #no-templates {
-  color: #ccc;
-  font-style: italic;
+#no-configurations,
+#no-templates {
+    color: #ccc;
+    font-style: italic;
 }
 
 #welcome {
-  margin-left: 24px;
+    margin-left: 24px;
+}
+
+.navigation-item a {
+    &:hover {
+        text-decoration: underline;
+    }
+
+    &:before {
+        content: "\270E\00A0";
+    }
+    display: block;
+    text-decoration: none;
+}
+
+.create-new-button a {
+    font-weight: bold;
+
+    &:before {
+        content: "+ ";
+    }
+}
+
+.variable-box {
+    margin-bottom: 1em;
+
+    & label {
+        margin-right: 1em;
+        display: block;
+        font-weight: bold;
+        color: #333;
+
+        &:before {
+            content: "$";
+        }
+    }
+
+    & input {
+        margin: 0.5em 0;
+        display: block;
+        min-width: 300px;
+        max-width: 600px;
+        width: 50%;
+    }
+
+    & .help {
+        font-size: 95%;
+        color: #999;
+    }
+}
+
+.no-variables {
+    border: 1px solid darken(#ffd24d, 25%);
+    margin: 1em;
+    padding: 1em;
+    color: darken(#ffd24d, 25%);
+    background: lighten(#ffd24d, 25%);
+
+    &:before {
+        content: "\26A0\00A0";
+    }
+}
+
+.cm-trailingspace {
+    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAACCAYAAAB/qH1jAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH3QUXCToH00Y1UgAAACFJREFUCNdjPMDBUc/AwNDAAAFMTAwMDA0OP34wQgX/AQBYgwYEx4f9lQAAAABJRU5ErkJggg==");
+    background-position: bottom left;
+    background-repeat: repeat-x;
+}
+
+#testarea {
+  border: 1px solid #ccc;
+  background: #efefef;
 }
