Restructured and new features

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -5,16 +5,21 @@ button {
 }
 
 .save-button {
-  background-color: rgb(121, 221, 27);;
+  background-color: #468966;
   color: #fff;
 }
 
 .copy-button {
-  background-color: rgb(255, 210, 77);
+  background-color: #FFB03B;
   color: #fff;
 }
 
 .delete-button {
   color: #fff;
-  background-color: #EF5C5D;
+  background-color: #8E2800;
+}
+
+.download-button {
+  color: #fff;
+  background-color: #B64926;
 }
