Readme update, Imports, minor fixes

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,6 +1,7 @@
 @import "tabs";
 @import "buttons";
 @import "navigation";
+@import "welcome";
 @import (inline) "./node_modules/codemirror/lib/codemirror.css";
 
 #app,
