Introduced linting for javascript and lesscss

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -1,25 +1,25 @@
 button {
-  margin: 8px 1px;
   background-color: white;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
+  margin: 8px 1px;
 }
 
 .save-button {
   background-color: #468966;
-  color: #fff;
+  color: #ffffff;
 }
 
 .copy-button {
-  background-color: #FFB03B;
-  color: #fff;
+  background-color: #ffb03b;
+  color: #ffffff;
 }
 
 .delete-button {
-  color: #fff;
-  background-color: #8E2800;
+  background-color: #8e2800;
+  color: #ffffff;
 }
 
 .download-button {
-  color: #fff;
-  background-color: #B64926;
+  background-color: #b64926;
+  color: #ffffff;
 }
