--- a/styles/welcome.less
+++ b/styles/welcome.less
@@ -7,9 +7,9 @@
 }
 
 #welcome code {
-  background: #eee;
-  margin: 1em;
-  margin-right: 0;
-  padding: 1em;
+  background: #eeeeee;
   display: block;
+  margin: 1em;
+  margin-right: 0px;
+  padding: 1em;
 }
