--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -1,26 +1,31 @@
 .tabs {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
+
 .tabs__labels {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
+
 .tabs__labels li {
   display: inline-block;
 }
+
 .tabs__labels li a {
-  padding: 8px 12px;
-  display: block;
-  color: #444;
-  outline: none;
-  text-decoration: none;
   border-bottom: 2px solid #f5f5f5;
+  color: #444444;
+  display: block;
+  outline: none;
+  padding: 8px 12px;
+  text-decoration: none;
 }
+
 .tabs__labels li a.active {
   border-bottom-color: #337ab7;
 }
+
 .tabs__labels li a.link {
   color: #337ab7;
 }
