Fixed #20 - Double-Check for Delete

--- a/styles/main.less
+++ b/styles/main.less
@@ -2,6 +2,7 @@
 @import 'buttons';
 @import 'navigation';
 @import 'welcome';
+@import 'popup';
 @import (inline) '../node_modules/codemirror/lib/codemirror.css';
 
 #app,
