--- a/styles/welcome.less
+++ b/styles/welcome.less
@@ -4,12 +4,29 @@
 
 #welcome {
   max-width: 800px;
-}
 
-#welcome code {
-  background: #eeeeee;
-  display: block;
-  margin: 1em;
-  margin-right: 0px;
-  padding: 1em;
+  p {
+    line-height: 130%
+  }
+
+  h1,
+  h2 {
+      border-bottom: 1px solid #eeeeee;
+      padding-bottom: 8px;
+  }
+
+  code {
+    background: #eeeeee;
+  }
+
+  code.language-ini {
+    
+  }
+
+  pre code {
+    display: block;
+    margin: 1em;
+    margin-right: 0px;
+    padding: 1em;
+  }
 }
