--- a/styles/welcome.less
+++ b/styles/welcome.less
@@ -3,6 +3,7 @@
 }
 
 #welcome {
+  margin-left: 24px;
   max-width: 800px;
 
   p {
@@ -20,7 +21,7 @@
   }
 
   code.language-ini {
-    
+
   }
 
   pre code {
