--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -1,13 +1,13 @@
 @import 'colors';
 
 #navigation {
-  background: lighten(@base, 60%);
+  background: desaturate(lighten(@base, 79%), 40%);
   border-right: 1px solid @base;
   flex-basis: 200px;
   margin: 0px;
   padding: 0px;
-  min-height: vmax;
-  height: vmax;
+  min-height: 100%;
+  height: 100%;
 }
 
 #navigation a {
@@ -21,7 +21,14 @@
 
 #navigation-actions li {
   list-style-type: none;
+  border-right: 1px solid @base;
+
+  &:last-of-type {
+    border-right: 0px;
+  }
 }
+
+
 
 #navigation-items li {
   border-bottom: 1px solid @base;
