--- a/styles/popup.less
+++ b/styles/popup.less
@@ -100,8 +100,8 @@
 }
 
 .popup__box__header {
-  background: lighten(@base, 60%);
-  color: #454b4d;
+  background: @base;
+  color: #ffffff;
   padding: 15px 20px;
 }
 
