--- a/styles/welcome.less
+++ b/styles/welcome.less
@@ -2,12 +2,12 @@
   display: none;
 }
 
-#welcome {
+.welcome {
   margin-left: 24px;
   max-width: 800px;
 
   p {
-    line-height: 130%
+    line-height: 130%;
   }
 
   h1,
@@ -20,9 +20,9 @@
     background: #eeeeee;
   }
 
-  code.language-ini {
+  /* code.language-ini {
 
-  }
+  } */
 
   pre code {
     display: block;
