--- a/styles/main.less
+++ b/styles/main.less
@@ -66,10 +66,6 @@ textarea:focus {
   height: 93%;
 }
 
-.template-box {
-  min-height: 200px;
-}
-
 .inner-content {
   margin: 8px;
 }
@@ -125,5 +121,15 @@ label {
   h2 {
     border-bottom: 1px solid #eeeeee;
     padding-bottom: 8px;
+  }
+}
+
+.toggle-group {
+  display: flex;
+
+  label {
+    display: block;
+    font-weight: normal;
+    margin-left: 8px;
   }
 }
