Added backup page

--- a/styles/main.less
+++ b/styles/main.less
@@ -133,3 +133,15 @@ label {
     margin-left: 8px;
   }
 }
+
+.alert-box {
+  height: 24px;
+  color: red;
+  padding: 8px;
+  background: #ffdddd;
+  border: 1px solid red;
+}
+
+.popup-app .alert-box {
+  height: 56px
+}
