--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -7,6 +7,7 @@
   height: 100%;
   margin: 0px;
   min-height: 100%;
+  min-width: 240px;
   padding: 0px;
 
   li {
@@ -38,6 +39,27 @@
       text-decoration: underline;
     }
 
+    .configuration-name {
+      display: inline-block;
+      max-width: 140px;
+    }
+
+    .configuration-updated-at {
+      color: #888888;
+      display: inline-block;
+      float: right;
+      font-size: 90%;
+      text-align: right;
+      width: 80px;
+
+      &:before {
+        content: '(';
+      }
+
+      &:after {
+        content: ')';
+      }
+    }
   }
 
   .actions {
@@ -54,17 +76,13 @@
     }
 
     a {
-      font-weight: bold;      
+      font-weight: bold;
     }
   }
 
   .items {
     li {
       border-bottom: 1px solid @base;
-    }
-
-    a:before {
-            content: '\270E\00A0';
     }
   }
 
