Design fixes for navigation

--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -9,6 +9,8 @@
   min-height: 100%;
   min-width: 240px;
   padding: 0px;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   li {
     padding: 0px;
@@ -50,7 +52,7 @@
       float: right;
       font-size: 90%;
       text-align: right;
-      width: 80px;
+      width: 68px;
 
       &:before {
         content: '(';
