--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,7 +1,11 @@
 @import 'colors';
 
 .editor {
-  height: 93%;
+  height: 100%;
+
+  .ReactCodeMirror {
+    height: calc(~'100% - 72px');
+  }
 
   .tabs {
     margin: 8px;
