Added GitHub Connector

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -48,34 +48,8 @@
   }
 
   .variable-box {
-    margin-bottom: 1em;
-
-    & label {
-      color: @success;
-      display: block;
-      font-size: 110%;
-      font-weight: bold;
-      margin-right: 1em;
-
-      &:before {
-        content: '$';
-      }
-    }
-
-    & input {
-      border: 1px solid desaturate(lighten(@base, 40%), 30%);
-      border-radius: 4px;
-      display: block;
-      font-size: 110%;
-      margin: 0.5em 0em;
-      max-width: 600px;
-      min-width: 300px;
-      padding: 4px;
-      width: 50%;
-    }
-
-    & .help {
-      color: #666666;
+    label:before {
+      content: '$';
     }
   }
 }
