--- a/styles/popup.less
+++ b/styles/popup.less
@@ -116,6 +116,12 @@
   z-index: 100;
 }
 
+.popup__box--error {
+  .popup__box__header {
+    background: @danger;
+  }
+}
+
 .popup__box__header {
   background: @base;
   color: #ffffff;
