Changes for upcoming release

--- a/styles/main.less
+++ b/styles/main.less
@@ -92,6 +92,10 @@ label {
   height: 100%;
 }
 
+.moustrap-auto-save-area {
+  height: 100%;
+}
+
 
 
 .no-variables {
@@ -178,4 +182,17 @@ label {
   & .help {
     color: #666666;
   }
+}
+
+.warning-box {
+  background: lighten(@warning, 37%);
+  border: 1px solid @warning;
+  color: @warning;
+  margin: 8px;
+  margin-bottom: 0px;
+  padding: 4px;
+}
+
+.no-warning-box {
+  display: none;
 }
