--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -84,11 +84,25 @@
 
   .items {
     li {
-      border-bottom: 1px solid @base;
+      border-bottom: 1px solid ;
     }
   }
 
   .upload-form {
+    display: none;
+  }
+
+  .searchBox {
+    width: 208px;
+    margin-left: 12px;
+    border-bottom: none;
+    border-top: none;
+    border-left: 1px solid @base;
+    border-right: 1px solid @base;
+    height: 20px;
+  }
+
+  .hidden {
     display: none;
   }
 }
