ReplaceFlowmapConnection and Search Feature Updates

--- a/styles/main.less
+++ b/styles/main.less
@@ -25,6 +25,13 @@ html,
 
   body,
   html,
+  input.searchBox {
+    width: 100%;
+    line-height: 20px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+
   .app-container {
     overflow-y: auto;
   }
@@ -207,5 +214,9 @@ label {
 }
 
 .no-warning-box {
+  display: none;
+}
+
+.hidden {
   display: none;
 }
