--- a/styles/editor.less
+++ b/styles/editor.less
@@ -3,8 +3,8 @@
 .editor {
   height: 100%;
 
-  .ReactCodeMirror {
-    height: calc(~'100% - 120px');
+  .editor-box {
+    height: calc(~'100% - 80px');
   }
 
   .tabs {
