--- a/styles/main.less
+++ b/styles/main.less
@@ -5,6 +5,7 @@
 @import 'welcome';
 @import 'popup';
 @import 'editor';
+@import 'ace';
 @import (inline) '../node_modules/codemirror/lib/codemirror.css';
 
 body,
@@ -20,7 +21,7 @@ html,
 
 .popup-app {
   min-width: 400px;
-  
+
   max-width: 800px;
 
   body,
@@ -217,4 +218,9 @@ label {
 
 .hidden {
   display: none;
+}
+
+.ace_editor {
+  border: 1px solid #ccc;
+  height: calc(100%-50px)
 }
