Fixed testing for ACE editor

--- a/styles/ace.less
+++ b/styles/ace.less
@@ -5,7 +5,7 @@
 /* Group */
 .ace_punctuation.ace_definition.ace_entity.ace_mnky,
 .ace_constant.ace_section.ace_group-title.ace_mnky {
-  color: blue;
+  color: #a00;
   font-weight: bold;
 }
 /* Option */
