Additional changes for ACE integration

--- a/styles/ace.less
+++ b/styles/ace.less
@@ -1,30 +1,36 @@
 /* Comment */
 .ace_punctuation.ace_definition.ace_comment.ace_mnky {
-  color: #a50
+  color: #aa5500;
 }
+
 /* Group */
 .ace_punctuation.ace_definition.ace_entity.ace_mnky,
 .ace_constant.ace_section.ace_group-title.ace_mnky {
-  color: #a00;
+  color: #aa0000;
   font-weight: bold;
 }
+
 /* Option */
 .ace_constant.ace_library.ace_mnky {
-  color: #f50;
+  color: #ff5500;
 }
+
 /* Search */
 .ace_keyword.ace_other.ace_definition.ace_mnky {
-  color: #00f;
+  color: #0000ff;
 }
+
 /* Function */
 .ace_entity.ace_name.ace_function.ace_mnky {
-  color: #708
+  color: #770088;
 }
+
 /* Import */
 .ace_storage.ace_type.ace_mnky {
-  color: #a11
+  color: #31b404;
 }
+
 /* Variable */
 .ace_variable.ace_mnky {
-  font-weight: bold
+  color: #bf00ff;
 }
