Editor styling and shortcuts

--- a/styles/main.less
+++ b/styles/main.less
@@ -6,7 +6,7 @@
 @import 'popup';
 @import 'editor';
 @import 'ace';
-@import (inline) '../node_modules/codemirror/lib/codemirror.css';
+@import 'table';
 
 body,
 html,
