--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -59,4 +59,10 @@
 .tabs__content {
   height: 100%;
   padding: 8px;
+  padding-bottom: 0px;
+}
+
+.scrolling-pane {
+  height: calc(100%-16px);
+  overflow: auto;
 }
