UI and bug fixes

--- a/styles/navigation.less
+++ b/styles/navigation.less
@@ -93,12 +93,12 @@
   }
 
   .searchBox {
-    width: 208px;
-    margin-left: 12px;
-    border-bottom: none;
+    width: 250px;
+    padding-left: 4px;
+    border-bottom: 1px solid @base;
     border-top: none;
-    border-left: 1px solid @base;
+    border-left: none;
     border-right: 1px solid @base;
-    height: 20px;
+    height: 24px;
   }
 }
