--- a/styles/editor.less
+++ b/styles/editor.less
@@ -14,11 +14,9 @@
 
   .title {
     background-color: @base;
-    border-bottom: 1px solid @base;
-    color: #ffffff;
+    color: #f0f0f0;
     display: flex;
-    padding: 1px;
-    padding-left: 8px;
+    padding: 4px 8px;
 
 
     b {
