--- a/styles/editor.less
+++ b/styles/editor.less
@@ -34,15 +34,23 @@
       padding: 8px;
     }
 
-    input {
+    input,
+    select {
       border: 1px solid darken(@base, 20%);
       border-bottom-right-radius: 4px;
       border-top-right-radius: 4px;
-      flex-grow: 1;
       font-size: 110%;
       margin: 8px;
       margin-left: 0px;
       padding: 8px;
+    }
+
+    input {
+      flex-grow: 3;
+    }
+
+    select {
+      flex-grow: 1;
     }
   }
 
